Complete both recursive and iterative.
number_gen generate the test file.

--- a/q3/Makefile
+++ b/q3/Makefile
@@ -1,13 +1,16 @@
 CC ?= gcc
 CFLAGS_common ?= -O0 -Wall -std=gnu99
 
-EXEC = iterative recursive
+EXEC = iterative recursive number_gen
 all: $(EXEC)
 
 iterative: iterative.c
 	$(CC) $(CFLAGS_common) -o $@ $@.c
 
 recursive: recursive.c
+	$(CC) $(CFLAGS_common) -o $@ $@.c
+
+number_gen: number_gen.c
 	$(CC) $(CFLAGS_common) -o $@ $@.c
 
 clean:
