First completion:recursive and iteration.
Also rewrite the Makefile.

--- a/q2/Makefile
+++ b/q2/Makefile
@@ -1,13 +1,16 @@
 CC ?= gcc
 CFLAGS_common ?= -O0 -Wall -std=gnu99
 
-EXEC = iterative recursive
+EXEC = iterative recursive char_series
 all: $(EXEC)
 
 iterative: iterative.c
 	$(CC) $(CFLAGS_common) -o $@ $@.c
 
 recursive: recursive.c
+	$(CC) $(CFLAGS_common) -o $@ $@.c
+
+char_series: char_series.c
 	$(CC) $(CFLAGS_common) -o $@ $@.c
 
 clean:
